tests/ui/ast_term.stderr
error[E0505]: cannot move out of `term` because it is borrowed
 --> $DIR/ast_term.rs:7:10
  |
6 |     let lit = term.literal(ast::Sign::NoSign);
  |               ---- borrow of `term` occurs here
7 |     drop(term);
  |          ^^^^ move out of `term` occurs here
8 |     let _hlit = ast::HeadLiteral::from(lit);
  |                                        --- borrow later used here

For more information about this error, try `rustc --explain E0505`.
